--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-DB_PASSWORDS=0000
-DB_USER=user
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
+
+#указать свои настройки для бд
